; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_subtitlehandler.c_subtitle_def_lang_list_init.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_subtitlehandler.c_subtitle_def_lang_list_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@.str = private unnamed_addr constant [20 x i8] c"subtitle_avail_lang\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"subtitle_selected_lang\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"SubtitleLanguageList\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @subtitle_def_lang_list_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @subtitle_def_lang_list_init(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @GHB_WIDGET(i32 %18, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %20 = call i32* @GTK_TREE_VIEW(i32 %19)
  store i32* %20, i32** %4, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = call i32* @gtk_tree_view_get_model(i32* %21)
  store i32* %22, i32** %5, align 8
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @GHB_WIDGET(i32 %25, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %27 = call i32* @GTK_TREE_VIEW(i32 %26)
  store i32* %27, i32** %4, align 8
  %28 = load i32*, i32** %4, align 8
  %29 = call i32* @gtk_tree_view_get_model(i32* %28)
  %30 = call i32* @GTK_TREE_STORE(i32* %29)
  store i32* %30, i32** %6, align 8
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %32 = call i32 @subtitle_def_selected_lang_list_clear(%struct.TYPE_5__* %31)
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32* @ghb_dict_get_value(i32 %35, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  store i32* %36, i32** %3, align 8
  %37 = load i32*, i32** %3, align 8
  %38 = icmp eq i32* %37, null
  br i1 %38, label %39, label %46

39:                                               ; preds = %1
  %40 = call i32* (...) @ghb_array_new()
  store i32* %40, i32** %3, align 8
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = load i32*, i32** %3, align 8
  %45 = call i32 @ghb_dict_set(i32 %43, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i32* %44)
  br label %46

46:                                               ; preds = %39, %1
  %47 = load i32*, i32** %3, align 8
  %48 = call i32 @ghb_array_len(i32* %47)
  store i32 %48, i32* %8, align 4
  store i32 0, i32* %7, align 4
  br label %49

49:                                               ; preds = %94, %46
  %50 = load i32, i32* %7, align 4
  %51 = load i32, i32* %8, align 4
  %52 = icmp slt i32 %50, %51
  br i1 %52, label %53, label %95

53:                                               ; preds = %49
  %54 = load i32*, i32** %3, align 8
  %55 = load i32, i32* %7, align 4
  %56 = call i32* @ghb_array_get(i32* %54, i32 %55)
  store i32* %56, i32** %9, align 8
  %57 = load i32*, i32** %9, align 8
  %58 = call i32 @ghb_lookup_lang(i32* %57)
  store i32 %58, i32* %10, align 4
  %59 = load i32, i32* %7, align 4
  %60 = icmp eq i32 %59, 0
  br i1 %60, label %61, label %67

61:                                               ; preds = %53
  %62 = load i32, i32* %10, align 4
  %63 = call i32* @ghb_iso639_lookup_by_int(i32 %62)
  store i32* %63, i32** %12, align 8
  %64 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %65 = load i32*, i32** %12, align 8
  %66 = call i32 @subtitle_update_pref_lang(%struct.TYPE_5__* %64, i32* %65)
  br label %67

67:                                               ; preds = %61, %53
  %68 = load i32*, i32** %5, align 8
  %69 = load i32, i32* %10, align 4
  %70 = call i64 @ghb_find_lang_row(i32* %68, i32* %11, i32 %69)
  %71 = icmp ne i64 %70, 0
  br i1 %71, label %72, label %88

72:                                               ; preds = %67
  %73 = load i32*, i32** %5, align 8
  %74 = call i32 @gtk_tree_model_get(i32* %73, i32* %11, i32 0, i32** %13, i32 1, i32* %14, i32 -1)
  %75 = load i32*, i32** %6, align 8
  %76 = call i32 @gtk_tree_store_append(i32* %75, i32* %15, i32* null)
  %77 = load i32*, i32** %6, align 8
  %78 = load i32*, i32** %13, align 8
  %79 = load i32, i32* %14, align 4
  %80 = call i32 @gtk_tree_store_set(i32* %77, i32* %15, i32 0, i32* %78, i32 1, i32 %79, i32 -1)
  %81 = load i32*, i32** %13, align 8
  %82 = call i32 @g_free(i32* %81)
  %83 = load i32*, i32** %5, align 8
  %84 = call i32* @GTK_TREE_STORE(i32* %83)
  %85 = call i32 @gtk_tree_store_remove(i32* %84, i32* %11)
  %86 = load i32, i32* %7, align 4
  %87 = add nsw i32 %86, 1
  store i32 %87, i32* %7, align 4
  br label %94

88:                                               ; preds = %67
  %89 = load i32*, i32** %3, align 8
  %90 = load i32, i32* %7, align 4
  %91 = call i32 @ghb_array_remove(i32* %89, i32 %90)
  %92 = load i32, i32* %8, align 4
  %93 = add nsw i32 %92, -1
  store i32 %93, i32* %8, align 4
  br label %94

94:                                               ; preds = %88, %72
  br label %49

95:                                               ; preds = %49
  %96 = load i32, i32* %8, align 4
  %97 = icmp eq i32 %96, 0
  br i1 %97, label %98, label %101

98:                                               ; preds = %95
  %99 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %100 = call i32 @subtitle_update_pref_lang(%struct.TYPE_5__* %99, i32* null)
  br label %101

101:                                              ; preds = %98, %95
  ret void
}

declare dso_local i32* @GTK_TREE_VIEW(i32) #1

declare dso_local i32 @GHB_WIDGET(i32, i8*) #1

declare dso_local i32* @gtk_tree_view_get_model(i32*) #1

declare dso_local i32* @GTK_TREE_STORE(i32*) #1

declare dso_local i32 @subtitle_def_selected_lang_list_clear(%struct.TYPE_5__*) #1

declare dso_local i32* @ghb_dict_get_value(i32, i8*) #1

declare dso_local i32* @ghb_array_new(...) #1

declare dso_local i32 @ghb_dict_set(i32, i8*, i32*) #1

declare dso_local i32 @ghb_array_len(i32*) #1

declare dso_local i32* @ghb_array_get(i32*, i32) #1

declare dso_local i32 @ghb_lookup_lang(i32*) #1

declare dso_local i32* @ghb_iso639_lookup_by_int(i32) #1

declare dso_local i32 @subtitle_update_pref_lang(%struct.TYPE_5__*, i32*) #1

declare dso_local i64 @ghb_find_lang_row(i32*, i32*, i32) #1

declare dso_local i32 @gtk_tree_model_get(i32*, i32*, i32, i32**, i32, i32*, i32) #1

declare dso_local i32 @gtk_tree_store_append(i32*, i32*, i32*) #1

declare dso_local i32 @gtk_tree_store_set(i32*, i32*, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @g_free(i32*) #1

declare dso_local i32 @gtk_tree_store_remove(i32*, i32*) #1

declare dso_local i32 @ghb_array_remove(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
